--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: crbiodiversity
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Some functions to retrieve biodiversity data of Costa Rica
 Version: 0.1.0
 Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Maintainer: The package maintainer <mspinola10@gmail.com>
+Description: Functions to retrive and map biodiversity data of Costa Rica.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
