--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Version: 0.1.0
 Author: Who wrote it
 Maintainer: The package maintainer <mspinola10@gmail.com>
 Description: Functions to retrive and map biodiversity data of Costa Rica.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.3
