--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,11 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 URL: https://manuelspinola.github.io/crbiodiversity/
+Depends:
+  spocc
+  sf
+Imports: 
+  spocc
+  sf
+
+
