--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,19 +2,20 @@ Package: crbiodiversity
 Type: Package
 Title: crbiodiversity: Biodiversity data of Costa Rica
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: functions to retrieve biodiversity data of Costa Rica.
+Authors@R: 
+    person("Manuel", "Spínola", , "mspinola10@gmail.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-7839-1908"))
+Maintainer: The package maintainer <mspinola10@gmail.com>
+Description: Functions to retrieve biodiversity data of Costa Rica.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 URL: https://manuelspinola.github.io/crbiodiversity/
-Depends:
-  spocc
-  sf
-Imports: 
-  spocc
-  sf
+Imports:
+    spocc,
+    sf,
+    ggplot2,
+    dplyr
 
 
